# composed-robot-desktop

./: camera_cal.npy  camera_calibration.py  hub.py  location_tracker.py  pyproject.toml  subscriber.py
composed-robot/: aruco_location.py  location_tracker.py
composed-robot/collection/: location_tracker_node.py
composed-robot/experiment1/: aruco_location_node.py  location_tracker_node.py
desktop_camera/: main.py
